--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li><a href="https://www.linkedin.com/in/steve-wakhungu/">LinkedIn</a></li>
           </ul>
        </nav>  
+       <div></div>
        <h2>About me</h2>
        <p>Wakhungu is a budding developer with a keen interest in mobile software development. This is the <em>first time</em> I am designing a website and I trust it will come out well, however basic.</p> 
        <p>Outside the development space, I also write about fitness though I have slacked off a bit recently; I mean learning how to code is a full-time endeavor. All the same, check this link<a href="https://www.essdoubleyou.com"></a> and tell me what you think. DM me via LinkedIn<a href="https://www.linkedin.com/in/steve-wakhungu/"></a>.</p>
