--- a/index.html
+++ b/index.html
@@ -4,30 +4,42 @@
       <link rel="stylesheet" href="style.css"/>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scaled=1">
-      <img src="https://static.wixstatic.com/media/37df9e_7eefbd351d6d45e78c01a9962d893066~mv2.png/v1/fill/w_80,h_80,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/Sw.png"/>
+      <img src="https://static.wixstatic.com/media/37df9e_7eefbd351d6d45e78c01a9962d893066~mv2.png/v1/fill/w_80,h_80,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/Sw.png" width="150" height="150"
             alt="my personal logo self designed">
             <hr>
       <title>My Personal Website</title>       
   </head>
   <body>
-      <h1>Hello World</h1>
+      <h1>Steve Wakhungu</h1>
       <script src="script.js"></script>
       <a href="https://www.essdoubleyou.com"></a>
+      <br>
       <nav>
           <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About me</a></li>
+            <li><a href="#">Portfolio</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="https://www.linkedin.com/in/steve-wakhungu/">LinkedIn</a></li>
           </ul>
-       </nav>  
+       </nav> 
+       <br> 
        <h2>About me</h2>
-       <p>Wakhungu is a budding developer with a keen interest in mobile software development. This is the <em>first time</em> I am designing a website and I trust it will come out well, however basic.</p> 
-       <p>Outside the development space, I also write about fitness though I have slacked off a bit recently; I mean learning how to code is a full-time endeavor. All the same, check this link<a href="https://www.essdoubleyou.com"></a> and tell me what you think. DM me via LinkedIn<a href="https://www.linkedin.com/in/steve-wakhungu/"></a>.</p>
-       <p>I must say though that my natural-born (and cultured) talent is in fine art. Check out my portfolio of artwork here and tell me what you think about it <a href="https://www.essdoubleyou.com/shop"></a> Of course the next portfolio you will be seeing associated with the name Wakhungu will be one of software development projects, both personal and professional. With this in mind, I hope to collaborate with you so that we find solutions to everyday problems. Walk with me.</p>
        <br>
-       <img 
-        src="https://www.essdoubleyou.com/photo-gallery?lightbox=dataItem-kyerffr41"/>
-        alt="beautiful sunset in Nakuru City">
+       <p style="text-align:center"> Wakhungu is a budding developer with a keen interest in mobile software development. This is the <em>first time</em> I am designing a website and I trust it will come out well, however basic.</p>
+       <br>
+       <p style="text-align:center"> Outside the development space, I also write about fitness though I have slacked off a bit recently; I mean learning how to code is a full-time endeavor. All the same, check this <a href="https://www.essdoubleyou.com">fitness blogs</a> link and have a read about how, why, and when to keep fit. You'll thank your body later on in life. DM me via <a href="https://www.linkedin.com/in/steve-wakhungu/">LinkedIn</a>.</p>
+       <br>
+       <p style="text-align:center"> I must say though that my natural-born (and cultured) talent is in fine art. Check out my portfolio of <a href="https://www.essdoubleyou.com/shop">artwork</a> and we can take a deep dive into the delightful world of art. Of course the next portfolio you will be seeing associated with the name Wakhungu will be one of software development projects, both personal and professional. With this in mind, I hope to collaborate with you so that we find solutions to everyday problems. Anthon St. Maarten said, “To expand the horizons of your utmost destiny you have to venture beyond the confines of fear, doubt and negativity.” This is me doing exactly that.</p>
+       <br>
+       <img src="1654688554031.jpg" alt="beautiful sunset in Nakuru City">
+        <br>  
+        <div>
+          <section>
+            <div class="contact" id="contact">
+              <h4> <span> Email : </span> <em>stwakhungu@gmail.com <a href="mailto:stwakhungu@gmail.com" subject="HTML link">Send me an email</a></em> </h4>
+              <h4> <span> Cell phone :</span> <em>+254721231559</em> </h4>
+          </section>
+        </div>
   </body>
 </html>
